# eat-cry-repeat

./: README.md  pyproject.toml
docs/proj-design/: Makefile  component.uml  container.uml  context.uml  design.tex  roastseq.uml  usecases.uml
docs/requirements/: .gitignore  Makefile  requirements-template.tex  requirements.md
src/eatcryrepeat/: ai.py  api.py  auth.py  cli.py  config.py  db.py  main.py
src/eatcryrepeat/api/: __init__.py  auth.py  entries.py
