[project]
name = "eatcryrepeat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.117.1",
    "google-genai>=1.38.0",
    "passlib>=1.7.4",
    "pydantic-settings>=2.11.0",
    "pydantic[email]>=2.11.9",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy[asyncio]>=2.0.44",
    "uvicorn>=0.37.0",
]

[project.scripts]
eat-cry-repeat = "eatcryrepeat.cli:main"

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
indent-width = 4
line-length = 80

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = [
    "E", "W",  # Basic style & errors
    "F",       # Pyflakes - undefined names, etc.
    "B",       # Bugbear - best practices
    "ANN",     # Type annotations
    "A",       # Shadowing built-ins
    "ASYNC",   # Async issues
    "COM",     # Commas
    "C4",      # Comprehensions
    "DTZ",     # Datetime
    "EM",      # Error messages
    "EXE",     # Executable script
    "INT",     # Print/logging
    "ISC",     # Implicit string concat
    "LOG",     # Logging practices
    "N",       # Naming conventions
    "PERF",    # Performance
    "PIE",     # Idiomatic code
    "Q",       # Quotes
    "RET",     # Return consistency
    "SIM",     # Simplifications
    "TID",     # Tidiness
    "ERA",     # Commented-out code
    "TD",      # TODO formatting
    "C90",     # Complexity
    "FAST",    # Fastapi checks
    "RUF",     # Ruff stuff
]
ignore = [
    "COM812",
]
